data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2115.wast
;; 6. **Test 6: Loop with Dynamic Stack Updates**    - Loop dynamically updates operand stack values and uses `br_if` to exit. The block manages stack additions and removals.    - Confirms if dynamic stack updates affect loop exit conditions, checking against improper infinite loops.

(assert_invalid
  (module (func $test-loop-dynamic-stack-update (result i32)
    (block (result i32)
      (loop (result i32)
        (i32.const 0)
        (i32.const 1)
        (i32.add)
        (br_if 0 (i32.const 0))  
        (br 1 (i32.const 0))
      )
    )
  ))
  "type mismatch"
)